--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,10 @@ services:
         condition: service_started
     restart: unless-stopped
     environment:
-      # still not working 
-      # PROFILE_HTTP_TLS_KEY_PATH: /local/localhost.key
-      # PROFILE_HTTP_TLS_CERT_PATH: /local/localhost.crt
-      # PROFILE_HTTP_CA_CERTS_PATHS: /local/ca.crt
+      PROFILE_HTTP_LISTEN_ADDRESS: :8443
+      PROFILE_HTTP_TLS_KEY_PATH: /local/localhost.key
+      PROFILE_HTTP_TLS_CERT_PATH: /local/localhost.crt
+      PROFILE_HTTP_CA_CERTS_PATHS: /local/ca.crt
 
       PROFILE_TENANT_SERVICE_BASE_URL: https://localhost:9443
 
@@ -35,5 +35,5 @@ services:
     volumes:
       - ./.local:/local
     ports:
-      - 8080:80
+      - 8443:8443
       
