--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -3,7 +3,7 @@ volumes:
   go-build:
 
 services:
-  server:
+  profile:
     build:
       target: builder
     volumes:
@@ -25,4 +25,5 @@ services:
         set -e
         step certificate create ca ca.crt ca.key --profile root-ca --no-password --insecure -f
         step certificate create localhost localhost.crt localhost.key --profile leaf --ca ca.crt --ca-key ca.key --no-password --insecure -f
+        step certificate create tenant tenant.crt tenant.key --profile leaf --ca ca.crt --ca-key ca.key --no-password --insecure -f
       
