--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       PROFILE_HTTP_TLS_KEY_PATH: /local/localhost.key
       PROFILE_HTTP_TLS_CERT_PATH: /local/localhost.crt
       PROFILE_HTTP_CA_CERTS_PATHS: /local/ca.crt
-      # PROFILE_HTTP_MTLS: true
+      PROFILE_HTTP_MTLS: "false"
 
       PROFILE_TENANT_SERVICE_BASE_URL: https://tenant:8443
 
@@ -62,7 +62,7 @@ services:
           respond /tenants/018e282f-0a88-7950-91d8-34cb8f9a9c2c 200 {
             body <<JSON
               {"id":"018e282f-0a88-7950-91d8-34cb8f9a9c2c","name":"dummy","expire":"2034-12-31T23:59:59.99999+07:00"}
-              JSON
+            JSON
           }
         }
         EOF
