--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,29 +15,6 @@ services:
     ports: 
       - 5432:5432
 
-  profile:
-    build: .
-    depends_on:
-      postgres:
-        condition: service_started
-    restart: unless-stopped
-    environment:
-      PROFILE_HTTP_LISTEN_ADDRESS: :8443
-      PROFILE_HTTP_TLS_KEY_PATH: /local/localhost.key
-      PROFILE_HTTP_TLS_CERT_PATH: /local/localhost.crt
-      PROFILE_HTTP_CA_CERTS_PATHS: /local/ca.crt
-      PROFILE_HTTP_MTLS: "false"
-
-      PROFILE_TENANT_SERVICE_BASE_URL: https://tenant:8443
-
-      PROFILE_POSTGRES_URL: postgres://testing:testing@postgres:5432/testing?sslmode=disable
-      PROFILE_POSTGRES_AEAD_KEY_PATH: /local/tink-aead.json
-      PROFILE_POSTGRES_MAC_KEY_PATH: /local/tink-mac.json
-    volumes:
-      - ./.local:/local
-    ports:
-      - 8443:8443
-      
 
   tenant:
     image: caddy:2.7.6
@@ -66,3 +43,29 @@ services:
           }
         }
         EOF
+
+  profile:
+    build: .
+    depends_on:
+      postgres:
+        condition: service_started
+      tenant:
+        condition: service_started
+    restart: unless-stopped
+    environment:
+      PROFILE_HTTP_LISTEN_ADDRESS: :8443
+      PROFILE_HTTP_TLS_KEY_PATH: /local/localhost.key
+      PROFILE_HTTP_TLS_CERT_PATH: /local/localhost.crt
+      PROFILE_HTTP_CA_CERTS_PATHS: /local/ca.crt
+      PROFILE_HTTP_MTLS: "false"
+
+      PROFILE_TENANT_SERVICE_BASE_URL: https://tenant:8443
+
+      PROFILE_POSTGRES_URL: postgres://testing:testing@postgres:5432/testing?sslmode=disable
+      PROFILE_POSTGRES_AEAD_KEY_PATH: /local/tink-aead.json
+      PROFILE_POSTGRES_MAC_KEY_PATH: /local/tink-mac.json
+    volumes:
+      - ./.local:/local
+    ports:
+      - 8443:8443
+      
