use san for scecifying additional name

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -24,6 +24,6 @@ services:
       - |-
         set -e
         step certificate create ca ca.crt ca.key --profile root-ca --no-password --insecure -f
-        step certificate create localhost localhost.crt localhost.key --profile leaf --ca ca.crt --ca-key ca.key --no-password --insecure -f
-        step certificate create tenant tenant.crt tenant.key --profile leaf --ca ca.crt --ca-key ca.key --no-password --insecure -f
+        step certificate create profile profile.crt profile.key --san localhost --profile leaf --ca ca.crt --ca-key ca.key --no-password --insecure -f
+        step certificate create tenant tenant.crt tenant.key --san localhost --profile leaf --ca ca.crt --ca-key ca.key --no-password --insecure -f
       
