--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 volumes:
   postgres:
-  redpanda:
+  kafka:
 
 services:
   postgres:
@@ -16,21 +16,20 @@ services:
     ports: 
       - 5432:5432
 
-  redpanda:
-    image: docker.redpanda.com/redpandadata/redpanda:v23.3.7
+  kafka:
+    image: bitnami/kafka
     restart: unless-stopped
-    command:
-      - redpanda
-      - start
-      - --kafka-addr=internal://0.0.0.0:9092,external://0.0.0.0:19092
-      - --advertise-kafka-addr=internal://redpanda:9092,external://localhost:19092
-      - --rpc-addr=redpanda:33145
-      - --advertise-rpc-addr=redpanda:33145
-      - --mode=dev-container
-      - --smp=1
-      - --default-log-level=error
+    environment:
+      KAFKA_CFG_NODE_ID: 0
+      KAFKA_CFG_PROCESS_ROLES: controller,broker
+      KAFKA_CFG_LISTENERS: INTERNAL://:9092,EXTERNAL://:19092,CONTROLLER://:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,EXTERNAL://localhost:19092
+      KAFKA_CFG_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@localhost:9093
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
     volumes:
-      - redpanda:/var/lib/redpanda/data
+      - kafka:/bitnami/kafka
     ports:
       - 19092:19092
 
@@ -67,7 +66,7 @@ services:
     depends_on:
       postgres:
         condition: service_started
-      redpanda:
+      kafka:
         condition: service_started
       tenant:
         condition: service_started
@@ -81,7 +80,7 @@ services:
 
       PROFILE_TENANT_SERVICE_BASE_URL: https://tenant:8443
 
-      PROFILE_KAFKA_BROKERS: redpanda:9092
+      PROFILE_KAFKA_BROKERS: kafka:9092
       PROFILE_KAFKA_TOPIC_OUTBOX: outbox      
 
       PROFILE_POSTGRES_URL: postgres://testing:testing@postgres:5432/testing?sslmode=disable
