--- a/docker-compose.keys.yml
+++ b/docker-compose.keys.yml
@@ -9,8 +9,10 @@ services:
       - |-
         step certificate create ca ca.crt ca.key \
           --profile root-ca --no-password --insecure -f 
-        step certificate create profile profile.crt profile.key --san profile --san localhost \
+        step certificate create profile profile.crt profile.key \
+          --san profile --san localhost --san 127.0.0.1 \
           --profile leaf --ca ca.crt --ca-key ca.key --no-password --insecure -f --not-after 8766h
-        step certificate create tenant tenant.crt tenant.key --san tenant --san localhost \
+        step certificate create tenant tenant.crt tenant.key \
+          --san tenant --san localhost --san 127.0.0.1 \
           --profile leaf --ca ca.crt --ca-key ca.key --no-password --insecure -f --not-after 8766h
       
