--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       POSTGRES_DB: testing
     volumes:
       - postgres:/var/lib/postgresql/data
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+      - ./pkg/postgres/schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
     ports: 
       - 5432:5432
 
