update example for query

--- a/api/openapi-spec/profile.yml
+++ b/api/openapi-spec/profile.yml
@@ -20,6 +20,10 @@ paths:
           required: true
           schema:
             $ref: "#/components/schemas/UUID"
+        - name: "validate"
+          in: query
+          schema:
+            type: boolean
       requestBody:
         required: true
         content:
