--- a/api/openapi-spec/profile.yml
+++ b/api/openapi-spec/profile.yml
@@ -21,9 +21,7 @@ paths:
                   in: path
                   required: true
                   schema:
-                    type: string
-                    format: uuid
-                    x-go-type-skip-optional-pointer: true
+                    $ref: '#/components/schemas/UUID'
                 - name: "validate"
                   in: query
                   schema:
@@ -33,54 +31,14 @@ paths:
                 content:
                     "application/json":
                         schema:
-                            properties:
-                                nin:
-                                    type: string
-                                    x-go-type-skip-optional-pointer: true
-                                name:
-                                    type: string
-                                    x-go-type-skip-optional-pointer: true
-                                email:
-                                    type: string
-                                    x-go-type-skip-optional-pointer: true
-                                phone:
-                                    type: string
-                                    x-go-type-skip-optional-pointer: true
-                                dob:
-                                    type: string
-                                    format: date-time
-                                    x-go-type-skip-optional-pointer: true
+                            $ref: '#/components/schemas/CreateProfile'
             responses:
                 "201":
                     description: success
                     content:
                         "application/json":
                             schema:
-                                properties:
-                                    id:
-                                        type: string
-                                        format: uuid
-                                        x-go-type-skip-optional-pointer: true
-                                    tenant_id:
-                                        type: string
-                                        format: uuid
-                                        x-go-type-skip-optional-pointer: true
-                                    nin:
-                                        type: string
-                                        x-go-type-skip-optional-pointer: true
-                                    name:
-                                        type: string
-                                        x-go-type-skip-optional-pointer: true
-                                    email:
-                                        type: string
-                                        x-go-type-skip-optional-pointer: true
-                                    phone:
-                                        type: string
-                                        x-go-type-skip-optional-pointer: true
-                                    dob:
-                                        type: string
-                                        format: date-time
-                                        x-go-type-skip-optional-pointer: true
+                                $ref: '#/components/schemas/Profile'
                 "400":
                     description: bad request
     /tenants/{tenant-id}/profiles/{profile-id}:
@@ -94,46 +52,59 @@ paths:
                   required: true
                   in: path
                   schema:
-                    type: string
-                    format: uuid
-                    x-go-type-skip-optional-pointer: true
+                    $ref: '#/components/schemas/UUID'
                 - name: profile-id
                   in: path
                   required: true
                   schema:
-                    type: string
-                    format: uuid
-                    x-go-type-skip-optional-pointer: true
+                    $ref: '#/components/schemas/UUID'
             responses:
                 "200":
                     description: "success"
                     content:
                         "application/json":
                             schema:
-                                properties:
-                                    id:
-                                        type: string
-                                        format: uuid
-                                        x-go-type-skip-optional-pointer: true
-                                    tenant_id:
-                                        type: string
-                                        format: uuid
-                                        x-go-type-skip-optional-pointer: true
-                                    nin:
-                                        type: string
-                                        x-go-type-skip-optional-pointer: true
-                                    name:
-                                        type: string
-                                        x-go-type-skip-optional-pointer: true
-                                    email:
-                                        type: string
-                                        x-go-type-skip-optional-pointer: true
-                                    phone:
-                                        type: string
-                                        x-go-type-skip-optional-pointer: true
-                                    dob:
-                                        type: string
-                                        format: date-time
-                                        x-go-type-skip-optional-pointer: true
+                                $ref: '#/components/schemas/Profile'
                 "404":
                     description: not found
+components:
+    schemas:
+        UUID:
+            type: string
+            format: uuid
+            x-go-type-skip-optional-pointer: true
+        ZeroableString:
+            type: string
+            x-go-type-skip-optional-pointer: true
+        ZeroableTime:
+            type: string
+            format: date-time
+            x-go-type-skip-optional-pointer: true
+        CreateProfile:
+            properties:
+                nin:
+                    $ref: '#/components/schemas/ZeroableString'
+                name:
+                    $ref: '#/components/schemas/ZeroableString'
+                email:
+                    $ref: '#/components/schemas/ZeroableString'
+                phone:
+                    $ref: '#/components/schemas/ZeroableString'
+                dob:
+                    $ref: '#/components/schemas/ZeroableTime'
+        Profile:
+            properties:
+                id:
+                    $ref: '#/components/schemas/UUID'
+                tenant_id:
+                    $ref: '#/components/schemas/UUID'
+                nin:
+                    $ref: '#/components/schemas/ZeroableString'
+                name:
+                    $ref: '#/components/schemas/ZeroableString'
+                email:
+                    $ref: '#/components/schemas/ZeroableString'
+                phone:
+                    $ref: '#/components/schemas/ZeroableString'
+                dob:
+                    $ref: '#/components/schemas/ZeroableTime'
