--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,6 +3,11 @@ volumes:
   go-build:
 
 services:
+  goose:
+    volumes:
+      - go-mod:/go/pkg/mod
+      - go-build:/root/.cache/go-build
+
   tenant:
     environment:
       CA_PATH: /src/pkg/httpserver/testdata/set1/ca.crt
