--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,15 @@ services:
       - goose:/go/pkg/mod
       - ${PWD:-.}:${PWD:-/src}
     working_dir: ${PWD:-/src}
-    entrypoint: [go, run, -mod=mod, github.com/pressly/goose/v3/cmd/goose ]
-    command: 
+    entrypoint: 
+      - go
+      - run
+      - -mod=mod
+      - github.com/pressly/goose/v3/cmd/goose 
       - -dir=./pkg/util/outbox/postgres/migration/
       - postgres
       - postgres://testing:testing@postgres:5432/testing?sslmode=disable
+    command: 
       - up
 
   kafka:
