--- a/api/openapi-spec/src/paths/create_profile.yml
+++ b/api/openapi-spec/src/paths/create_profile.yml
@@ -13,6 +13,7 @@ post:
       in: query
       schema:
         type: boolean
+        # x-go-type-skip-optional-pointer: true
   requestBody:
     required: true
     content:
