--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,28 +14,9 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
       - ./pkg/postgres/schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+      - ./pkg/util/outboxce/postgres/schema.sql:/docker-entrypoint-initdb.d/outboxce.sql:ro # outboxce
     ports: 
       - 5432:5432
-  
-  goose:
-    image: golang:1.22
-    depends_on:
-      postgres:
-        condition: service_started
-    volumes:
-      - goose:/go/pkg/mod
-      - ${PWD:-.}:${PWD:-/src}
-    working_dir: ${PWD:-/src}
-    entrypoint: 
-      - go
-      - run
-      - -mod=mod
-      - github.com/pressly/goose/v3/cmd/goose 
-      - -dir=./pkg/util/outboxce/postgres/migration/
-      - postgres
-      - postgres://testing:testing@postgres:5432/testing?sslmode=disable
-    command: 
-      - up
 
   kafka:
     image: bitnami/kafka
@@ -53,24 +34,6 @@ services:
       - kafka:/bitnami/kafka
     ports:
       - 19092:19092
-
-  kafka_topic:
-    image: bitnami/kafka
-    restart: on-failure
-    depends_on:
-      kafka: 
-        condition: service_started
-    entrypoint: [bash, -c]
-    command:
-      - |
-        set -e
-
-        kafka-topics.sh --bootstrap-server kafka:9092 --topic outboxce --create || true
-
-        echo "-----------------------------------"
-        echo "start consuming from 'outboxce' topic"
-        echo "-----------------------------------"
-        kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic outboxce
 
   tenant:
     image: caddy:2.7.6
