--- a/api/openapi-spec/src/paths/create_profile.yml
+++ b/api/openapi-spec/src/paths/create_profile.yml
@@ -29,3 +29,13 @@ post:
             $ref: "../schemas/profile.yml#/components/schemas/Profile"
     400:
       description: bad request
+      content:
+        "application/json":
+          schema:
+            $ref: "../schemas/profile.yml#/components/schemas/Error"
+    500:
+      description: server error
+      content:
+        "application/json":
+          schema:
+            $ref: "../schemas/profile.yml#/components/schemas/Error"
