--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,24 +17,27 @@ services:
 
   tenant:
     environment:
-      CA_PATH: /src/pkg/httpserver/testdata/ca.crt
-      TLS_KEY_PATH: /src/pkg/httpserver/testdata/tenant.key
-      TLS_CERT_PATH: /src/pkg/httpserver/testdata/tenant.crt
+      CA_PATH: /src/internal/httpserver/testdata/ca.crt
+      TLS_KEY_PATH: /src/internal/httpserver/testdata/tenant.key
+      TLS_CERT_PATH: /src/internal/httpserver/testdata/tenant.crt
     volumes:
       - .:/src
 
   profile:
     build:
       target: ${PROFILE_DOCKERFILE_TARGET:-base}
+    depends_on:
+      kafka_topic:
+        condition: service_started
     environment:
       PWD: ${PWD:-/src}
-      PROFILE_AEAD_DERIVABLE_KEYSET_PATH: $$PWD/pkg/postgres/testdata/tink-aead.json
-      PROFILE_MAC_DERIVABLE_KEYSET_PATH: $$PWD/pkg/postgres/testdata/tink-mac.json
-      PROFILE_BIDX_DERIVABLE_KEYSET_PATH: $$PWD/pkg/postgres/testdata/tink-mac.json
-      PROFILE_TLS_KEY_PATH: $$PWD/pkg/httpserver/testdata/profile.key
-      PROFILE_TLS_CERT_PATH: $$PWD/pkg/httpserver/testdata/profile.crt
-      PROFILE_TLS_CLIENT_CA_PATH: $$PWD/pkg/httpserver/testdata/ca.crt
-      PROFILE_TLS_ROOT_CA_PATH: $$PWD/pkg/httpserver/testdata/ca.crt
+      PROFILE_AEAD_DERIVABLE_KEYSET_PATH: $$PWD/internal/postgres/testdata/tink-aead.json
+      PROFILE_MAC_DERIVABLE_KEYSET_PATH: $$PWD/internal/postgres/testdata/tink-mac.json
+      PROFILE_BIDX_DERIVABLE_KEYSET_PATH: $$PWD/internal/postgres/testdata/tink-mac.json
+      PROFILE_TLS_KEY_PATH: $$PWD/internal/httpserver/testdata/profile.key
+      PROFILE_TLS_CERT_PATH: $$PWD/internal/httpserver/testdata/profile.crt
+      PROFILE_TLS_CLIENT_CA_PATH: $$PWD/internal/httpserver/testdata/ca.crt
+      PROFILE_TLS_ROOT_CA_PATH: $$PWD/internal/httpserver/testdata/ca.crt
     volumes:
       - go-mod:/go/pkg/mod
       - go-build:/root/.cache/go-build
